# taym

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
c/: Makefile  README.md
c/include/taym/: taym.h
c/src/: taym.c
c/tests/: test_roundtrip.c
docs/: TAYM-format-draft-0.1.md  TAYM-overview.md
python/: CHANGELOG.md  README.md  hatch_build.py  pyproject.toml
python/src/taym/: __init__.py  __main__.py  codec.py  dump.py  model.py  psg.py  sample.py  spec.py  stats.py  transform.py  validate.py
python/src/taym/engine/: README.md  __init__.py  __main__.py  engine.py
python/tests/: test_taym_codec.py  test_taym_dac_combine.py  test_taym_stats_dump.py  test_taym_validate.py  test_taymengine_psg.py
